--- a/Login.html
+++ b/Login.html
@@ -29,15 +29,22 @@
     <style>
         body,html {
             height: 100%;
-            background-color: black;
+            background-color: #38B1AD;
+            background-image: url('logo_transp.png'); /* Replace 'path/to/your/logo.png' with the actual path to your PNG logo */
+            background-repeat: repeat-spaced;
+            /* background-repeat:no-repeat; */
+                    background-size: 20%; /* Make the logo cover the entire page */
+        background-position: 3 3;
+        /* Set the initial position of the repeated background images */        /* background-color: rgba(255, 255, 255, 0.137);  */
         }
         .login-box {
             max-width: 400px; /* Adjust the maximum width to your preference */
             margin: 0 auto; /* Center the box horizontally */
             padding: 20px; /* Add some padding around the form */
-            background-color: #f9f9f9; /* Optional: Add a background color to the box */
-            border: 1px solid #ddd; /* Optional: Add a border around the box */
+            background-color: black; /* Optional: Add a background color to the box */
+            border: 1px solid #505050; 
             border-radius: 8px; /* Optional: Add rounded corners to the box */
+            color:white;
         }
     </style>
 </head>
