--- a/mijnaanbiedingenwerkgever.html
+++ b/mijnaanbiedingenwerkgever.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mijn Vacatures (bedrijf)</title>
+    <title>Mijn Vacatures</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="settings.js"></script>
 
@@ -107,7 +107,7 @@
       </style>
 <div class="row">
 <div class="col-12">
-  <h1>Mijn Vacatures (bedrijf)</h1>
+  <h1>Mijn Vacatures</h1>
 </div>
 </div>
 
