--- a/mijnaanbiedingenwerkgever.html
+++ b/mijnaanbiedingenwerkgever.html
@@ -28,6 +28,7 @@
       })
     </script>
     <link rel="stylesheet" type="text/css" href="styles.css">
+   
     
 </head>
 <body>
@@ -155,5 +156,7 @@ function loadMijnVacatures(){
         }
 
 loadMijnVacatures();
+
+// doet niks
 </script>
 </html>
