--- a/Login.html
+++ b/Login.html
@@ -31,10 +31,10 @@
             height: 100%;
             background-color: #38B1AD;
             background-image: url('logo_transp.png'); /* Replace 'path/to/your/logo.png' with the actual path to your PNG logo */
-            background-repeat: repeat-spaced;
+            background-repeat: no-repeat;
             /* background-repeat:no-repeat; */
-                    background-size: 20%; /* Make the logo cover the entire page */
-        background-position: 3 3;
+                    background-size: 95%; /* Make the logo cover the entire page */
+        background-position: center center;
         /* Set the initial position of the repeated background images */        /* background-color: rgba(255, 255, 255, 0.137);  */
         }
         .login-box {
